Fix padding and alignment

--- a/assets/sass/patterns/atoms/info-bars.scss
+++ b/assets/sass/patterns/atoms/info-bars.scss
@@ -41,7 +41,7 @@
   }
 
   .info-bar__container {
-    @include padding(28 56 28 28);
+    @include padding(28);
     @include margin(24, "bottom");
   }
 
@@ -50,6 +50,7 @@
     background: url("../img/icons/info-blue.svg") 0 0 no-repeat, linear-gradient(transparent, transparent);
     font-weight: 400;
     line-height: 1.7;
+    text-align: left;
   }
 }
 
